Fix frontend spacing between components on main

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -85,7 +85,8 @@ h1 {
 }
 
 #roadmapGoesHere {
-    margin-bottom: 50px;
+    /* margin-bottom: 50px; */
+    margin-bottom: 0px;
 }
 
 .VIpgJd-ZVi9od-ORHb-oEVmcd {
